# keybridge-server

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  PROTOCOL.md  README.md  SECURITY.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
packaging/: README.md  keybridge.iss  keybridge.spec
src/: .env.example  config.py  launcher.py  main.py  server.py
src/utils/: commands.py  connection_manager.py  envelope.py  keyboard_controller.py  logger.py  message_handler.py  paths.py  qr_utils.py  security.py
tests/: test_protocol.py  test_security.py
