[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keybridge-server"
version = "1.1.0"
description = "Desktop host for KeyBridge — turns a phone into a keyboard for this PC over the local network."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Rushyendra Guntupalli (dog-broad) and Contributors" }]
keywords = ["keyboard", "remote-input", "websocket", "pynput", "qr-pairing"]
dependencies = [
    "cryptography==41.0.7",
    "PySide6-Essentials==6.8.1",
    "pynput==1.8.1",
    "python-dotenv==1.2.1",
    "qrcode==8.2",
    "websockets==15.0.1",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "pyinstaller==6.11.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
